--- a/index.html
+++ b/index.html
@@ -13,6 +13,39 @@
 </head>
 <body>
 
+<header>
+  <nav>
+    <div class="logo">
+      <a href="#"><img src="./images/logo.svg" alt="logo"></a>
+    </div>
+
+    <ul class="nav__lists">
+<li class="nav__items"><a href="#">Pricing</a></li>
+<li class="nav__items"><a href="#">Product</a></li>
+<li class="nav__items"><a href="#">About</a> Us</li>
+<li class="nav__items"><a href="#">Careers</a></li>
+<li class="nav__items"><a href="#">Community</a></li>
+    </ul>
+
+    <button>Get Started</button>
+  </nav>
+</header>
+
+  <main>
+<section class="hero__section">
+  <div class="heading__text">
+    <h1>Bring everyone together to build better products.</h1>
+    <p>Manage makes it simple for software teams to plan day-to-day taks whiel keeping the larger team goals in view.</p>
+    <button class="cta__btn">Get Started</button>
+  </div>
+  
+</section>
+
+<div class="hero__illustration">
+  <img src="./images/illustration-intro.svg" alt="illustration-intro">
+</div>
+  </main>
+
   Pricing
   Product
   About Us
