--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="dots"></div>
-        <button class="cta__btn"> Get Started</button>
+        <button class="cta__btn">Get Started</button>
       </section>
 
       <section class="section__3">
@@ -172,7 +172,7 @@
 
     <footer>
       <div class="footer__logo">
-        <img src="./images/logo.svg" alt="footer__logo" />
+        <img src="./images/footer-logo.svg" alt="footer-logo" />
         <div class="socials">
           <ul>
             <li>
@@ -195,21 +195,23 @@
         </div>
       </div>
 
-      <div class="footer__nav__1">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">About Us</a></li>
-        </ul>
-      </div>
+      <div class="footer__nav__basic">
+        <div class="footer__nav__1">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+        </div>
 
-      <div class="footer__nav__2">
-        <ul>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Community</a></li>
-          <li><a href="#"></a>Privacy Policy</li>
-        </ul>
+        <div class="footer__nav__2">
+          <ul>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
       </div>
 
       <div class="footer__nav__3">
@@ -218,7 +220,7 @@
           class="input__email"
           placeholder="Updates in your inbox..."
         />
-        <button>Go</button>
+        <button class="cta__btn">Go</button>
       </div>
       <p>copyright 2020. All Rights Reserved</p>
     </footer>
