--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           class="input__email"
           placeholder="Updates in your inbox..."
         />
-        <button class="cta__btn">Go</button>
+        <button class="cta__btn submit">Go</button>
       </div>
       <p>copyright 2020. All Rights Reserved</p>
     </footer>
