--- a/index.html
+++ b/index.html
@@ -171,56 +171,64 @@
     </main>
 
     <footer>
-      <div class="footer__logo">
-        <img src="./images/footer-logo.svg" alt="footer-logo" />
-        <div class="socials">
-          <ul>
-            <li>
-              <a href="#"></a>
-              <img src="./images/icon-facebook.svg" alt="icon-facebook" />
-            </li>
-            <li>
-              <img src="./images/icon-youtube.svg" alt="icon-youtube" />
-            </li>
-            <li>
-              <img src="./images/icon-twitter.svg" alt="icon-twitter" />
-            </li>
-            <li>
-              <img src="./images/icon-pinterest.svg" alt="icon-pinterest.svg" />
-            </li>
-            <li>
-              <img src="./images/icon-instagram.svg" alt="icon-instagram.svg" />
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="footer__nav__basic">
-        <div class="footer__nav__1">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About Us</a></li>
-          </ul>
+      <div class="footer__elements">
+        <div class="footer__logo">
+          <img src="./images/footer-logo.svg" alt="footer-logo" />
+          <div class="socials">
+            <ul>
+              <li>
+                <a href="#"></a>
+                <img src="./images/icon-facebook.svg" alt="icon-facebook" />
+              </li>
+              <li>
+                <img src="./images/icon-youtube.svg" alt="icon-youtube" />
+              </li>
+              <li>
+                <img src="./images/icon-twitter.svg" alt="icon-twitter" />
+              </li>
+              <li>
+                <img
+                  src="./images/icon-pinterest.svg"
+                  alt="icon-pinterest.svg"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/icon-instagram.svg"
+                  alt="icon-instagram.svg"
+                />
+              </li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer__nav__2">
-          <ul>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Community</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-          </ul>
-        </div>
-      </div>
+        <div class="footer__nav__basic">
+          <div class="footer__nav__1">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+          </div>
 
-      <div class="footer__nav__3">
-        <input
-          type="email"
-          class="input__email"
-          placeholder="Updates in your inbox..."
-        />
-        <button class="cta__btn submit">Go</button>
+          <div class="footer__nav__2">
+            <ul>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Community</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__nav__3">
+          <input
+            type="email"
+            class="input__email"
+            placeholder="Updates in your inbox..."
+          />
+          <button class="cta__btn submit">Go</button>
+        </div>
       </div>
       <p>copyright 2020. All Rights Reserved</p>
     </footer>
