mobile view complete

--- a/index.html
+++ b/index.html
@@ -173,7 +173,14 @@
     <footer>
       <div class="footer__elements">
         <div class="footer__logo">
-          <img src="./images/footer-logo.svg" alt="footer-logo" />
+          <div class="logo__img__section">
+            <a href="#">
+              <img
+                src="./images/footer-logo.svg"
+                alt="footer-logo"
+                class="footer__logo__img"
+            /></a>
+          </div>
           <div class="socials">
             <ul>
               <li>
@@ -230,7 +237,7 @@
           <button class="cta__btn submit">Go</button>
         </div>
       </div>
-      <p>copyright 2020. All Rights Reserved</p>
+      <p class="copyright">Copyright 2020. All Rights Reserved</p>
     </footer>
 
     <script src="script.js"></script>
