--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ul>
 
         <div class="hamburger">
-          <img src="./images/icon-hamburger.svg" alt="hamburger-icon" />
+          <img src="./images/icon-hamburger.svg" alt="hamburger-icon" class="hamburger__icon" />
         </div>
       </nav>
       <button class="nav__cta">Get Started</button>
@@ -46,7 +46,7 @@
     <div class="bg__image">
       <img src="./images/bg-tablet-pattern.svg" alt="bg__image" />
     </div>
-    <main>
+    <main >
       <section class="section__1">
         <section class="hero__section">
           <div class="heading__text">
