--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
         </div>
 
         <ul class="nav__lists">
-          <li class="nav__items"><a href="#">Pricing</a></li>
-          <li class="nav__items"><a href="#">Product</a></li>
-          <li class="nav__items"><a href="#">About Us</a></li>
-          <li class="nav__items"><a href="#">Careers</a></li>
-          <li class="nav__items"><a href="#">Community</a></li>
+          <li class="nav__items"><a href="#" class="item">Pricing</a></li>
+          <li class="nav__items"><a href="#" class="item">Product</a></li>
+          <li class="nav__items"><a href="#" class="item">About Us</a></li>
+          <li class="nav__items"><a href="#" class="item">Careers</a></li>
+          <li class="nav__items"><a href="#" class="item">Community</a></li>
         </ul>
 
         <div class="hamburger">
-          <img src="./images/icon-hamburger.svg" alt="hamburger-icon" class="hamburger__icon" />
+          <img
+            src="./images/icon-hamburger.svg"
+            alt="hamburger-icon"
+            class="hamburger__icon"
+          />
         </div>
       </nav>
       <button class="nav__cta">Get Started</button>
@@ -46,7 +50,7 @@
     <div class="bg__image">
       <img src="./images/bg-tablet-pattern.svg" alt="bg__image" />
     </div>
-    <main >
+    <main>
       <section class="section__1">
         <section class="hero__section">
           <div class="heading__text">
