desktop view ip

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <img src="./images/bg-tablet-pattern.svg" alt="bg__image" />
     </div>
     <main>
-      <section class="section__1">
+      <div class="section__1">
         <section class="hero__section">
           <div class="heading__text">
             <h1>Bring everyone together to build better products.</h1>
@@ -63,10 +63,10 @@
           </div>
         </section>
 
-        <section class="illustration">
+        <div class="illustration">
           <img src="./images/illustration-intro.svg" alt="illustration-intro" />
-        </section>
-      </section>
+        </div>
+      </div>
 
       <section class="section__2">
         <div class="text__section">
